fixed random section spacing

--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ a {
 }
 
 .left-content p {
-    color: #E5E7EB;
     font-size: 18px;
+    color: #E5E7EB;
 }
 
 .left-content p {
@@ -113,9 +113,14 @@ h1 {
 .random .random-info {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    justify-content: space-around;
 }
 
+
+.random-stuff p {
+    font-size: 18px;
+    width: 270px;
+}
 
 .random h2 {
     font-size: 36px;
@@ -124,7 +129,7 @@ h1 {
     text-align: center;
 }
 
-.image-random img {
+.random-stuff img {
     height: 270px;
     width: 270px;
 }
